syntax = "proto3";
package panacea.market.v2;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/medibloc/panacea-core/x/market/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// Msg defines the Msg service.
service Msg {
  // CreateDeal defines a method for creating a deal.
  rpc CreateDeal(MsgCreateDeal) returns (MsgCreateDealResponse);
}

//MsgCreateDeal defines the Msg/CreateDeal request type.
message MsgCreateDeal {
  repeated string data_schema = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin budget = 2 [(gogoproto.nullable) = false];
  uint64 max_num_data = 3 [(gogoproto.nullable) = false];
  repeated string trusted_data_validators = 4 [(gogoproto.nullable) = false];
  string owner = 5 [(gogoproto.nullable) = false];
}

//MsgCreateDealResponse defines the Msg/CreateDeal response type.
message MsgCreateDealResponse {
  uint64 deal_id = 1;
}
